# PocketStream-Desktop

./: .gitignore  README.md  gh-tag-updates-instructions.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.ps1  bundle-gstreamer.ps1  check-third-party.ps1  check.ps1  gstreamer-manifest.psd1  mirror-gstreamer-src.ps1
src/: main.js  main.ts
src-tauri/: .tauri-signing-key.pub  Cargo.toml  about.hbs  about.toml  audit.toml  build.rs  pocketstream.exe.manifest  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/licenses/: THIRD-PARTY-NOTICES.md
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  validation.rs
src-tauri/src/camera/: flir_ptu.rs  mod.rs  onvif.rs  ptz.rs
src-tauri/src/commands/: camera.rs  config.rs  mod.rs  network.rs  streaming.rs
src-tauri/src/network/: adapter_refresh.rs  arp.rs  auto_adopt.rs  cache_probe.rs  device_registry.rs  firewall.rs  ghost.rs  interface.rs  ip_config.rs  mod.rs  ping_dot.rs  pktmon.rs  reaper.rs  scanner.rs  watcher.rs
src-tauri/src/streaming/: audio.rs  mod.rs  recorder.rs  rtsp_client.rs  rtsp_server.rs  video_embed.rs
src/lib/: device-cache.js  device-cache.ts  device-list.js  device-list.ts  device-state.js  device-state.ts  devices.js  devices.ts  errors.js  errors.ts  markdown-lite.ts  network.js  network.ts  ptz.js  ptz.ts  state.js  state.ts  store.js  store.ts  streaming.js  streaming.ts  tauri-api.js  tauri-api.ts  (+2 more)
(+3 files in other folders)
